# static_server

./: Makefile  README.rst  pyproject.toml  setup.py
src/cocoserver/: __init__.py
src/static_server/: __init__.py
